fixed text overflow on phone version

--- a/responsive.css
+++ b/responsive.css
@@ -113,7 +113,7 @@ p {
     grid-template-rows: auto; 
     font-family: cursive; 
     color: rgb(244, 220, 124);
-    font-size: 6vw;
+    font-size: 5vw;
     text-shadow: 1px 1px 1px  rgb(53, 53, 53); 
     padding-right: 0vw; 
     position: relative;
@@ -121,7 +121,7 @@ p {
 }
 #Initials { 
     color: rgb(244, 220, 124);
-    font-size: 11vw;
+    font-size: 10vw;
     text-shadow: 1px 1px 1px  rgb(53, 53, 53); 
     grid-column-start: 2;
     grid-column-end:3;
